refactor : SonarLint에 따라 Arrays 대신 List.of() 로 origin 저장